--- a/web content/maxtemperature.html
+++ b/web content/maxtemperature.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Latitude</a>
+            <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -17,7 +17,7 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="data.htm">Data</a>
+                  <a class="nav-link" href="data.html">Data</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="comparison.html">Comparison</a>
@@ -36,29 +36,12 @@
               </ul>
             </div>
           </nav>
-        <div class="container-fluid" style = "border:1px solid #2991f1;">
-            <div class="row">
-                <div class="col-sm-6">
-                <h1><strong></strong>Summary: Latitude vs X</strong></h1>
-                The purpose of this project was to analyze how weather changes as you vary latitude.  To accomplish the analysis, the OpenWeatherMAP API was used to 
-                assemble a dataset of 500 cities.
-
-                Matplotlib was then utilized to demonstrate the various relationships of weather verus latitude.  Factors examined included temperature, wind speed, 
-                cloudiness and humidity.  This site provides the source data and visualizations created for the analysis.  Trends and observations found are also discussed.
-                </div>
-                <div class="col-md-6"> 
-                <img src="Fig1.png" class="img-fluid">
-            </div>
-            </div>
-        </div>
-      <div class="container-fluid" style = "border:1px solid #2991f1;">
-          <h1><strong></strong>Visualizations</strong></h1>
-            <div class="row">
-                <div class="col"><img src="Fig1.png" class="img-fluid"></div>
-                <div class="col"><img src="Fig2.png" class="img-fluid"></div>
-                <div class="col"><img src="Fig3.png" class="img-fluid"></div>
-                <div class="col"><img src="Fig4.png" class="img-fluid"></div>
-            </div>
-      </div>
-    </body>
-</html>
+          <div class="container-fluid"> 
+            <h1><strong></strong>Max Temperature</strong></h1>
+            <img src="Fig1.png" class="img-fluid">
+                <p>As expected the temerpature becomes significantly warmer as you approach the Earth's equator (0 Deg latitude).  It is interesteing to note that the northern 
+                    hemisphere is significantly cooler than the sourthern.  This is due to the temperatures being recorded in January when the northern hemisphere is in winter
+                    and is tilted away from the sun.
+                </p>
+          </div>
+      </body>
